# opencv-test-cmake

./: CMakeLists.txt  LICENSE  README.md  main.cpp
